kubernetes/apps/external-services/adguard/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.2.6
    ports:
      - name: http
        port: 3000
        protocol: TCP
