kubernetes/apps/external-services/adguard/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: external-services
spec:
  # selector:
  #   app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      # protocol: HTTP
      port: 3000
      # targetPort:
  type: ClusterIP
