kubernetes/apps/external-services/adguard/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.adguard
      hosts:
        - "adguard.${SECRET_DOMAIN}"

  rules:
    - host: adguard.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  name: http
